@@ -9,16 +9,18 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.mockStatic;
 import static org.mockito.Mockito.when;
 
-import com.ids.keycloak.security.config.KeycloakSecurityConstants;
 import com.ids.keycloak.security.exception.ConfigurationException;
 import com.ids.keycloak.security.exception.IntrospectionFailedException;
+import com.ids.keycloak.security.exception.UserInfoFetchException;
 import com.ids.keycloak.security.model.KeycloakPrincipal;
 import com.ids.keycloak.security.util.JwtUtil;
 import com.sd.KeycloakClient.dto.KeycloakResponse;
 import com.sd.KeycloakClient.dto.auth.KeycloakIntrospectResponse;
+import com.sd.KeycloakClient.dto.user.KeycloakUserInfo;
 import com.sd.KeycloakClient.factory.KeycloakClient;
+import java.time.Instant;
 import java.util.Collections;
-import java.util.List;
+import java.util.HashMap;
 import java.util.Map;
 import java.util.Optional;
 import org.junit.jupiter.api.BeforeEach;
@@ -26,13 +28,11 @@ import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Answers;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockedStatic;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.security.core.Authentication;
-import org.springframework.security.oauth2.client.registration.ClientRegistration;
-import org.springframework.security.oauth2.client.registration.ClientRegistrationRepository;
+import org.springframework.security.oauth2.core.oidc.OidcIdToken;
 
 /**
  * {@link KeycloakAuthenticationProvider} 테스트.
@@ -41,35 +41,27 @@ import org.springframework.security.oauth2.client.registration.ClientRegistratio
 @ExtendWith(MockitoExtension.class)
 class KeycloakAuthenticationProviderTest {
 
-    @InjectMocks
     private KeycloakAuthenticationProvider provider;
 
     @Mock(answer = Answers.RETURNS_DEEP_STUBS)
     private KeycloakClient keycloakClient;
 
-    @Mock
-    private ClientRegistrationRepository clientRegistrationRepository;
-
     private static final String CLIENT_ID = "test-client-id";
-    private static final String REGISTRATION_ID = KeycloakSecurityConstants.REGISTRATION_ID;
     private static final String USER_SUB = "user-123";
 
     @BeforeEach
     void setUp() {
-    }
-
-    private ClientRegistration createMockClientRegistration(String clientId) {
-        return ClientRegistration.withRegistrationId(REGISTRATION_ID)
-                .clientId(clientId)
-                .authorizationGrantType(org.springframework.security.oauth2.core.AuthorizationGrantType.AUTHORIZATION_CODE)
-                .redirectUri("{baseUrl}/login/oauth2/code/{registrationId}")
-                .authorizationUri("https://auth-server/auth")
-                .tokenUri("https://auth-server/token")
-                .build();
+        provider = new KeycloakAuthenticationProvider(keycloakClient, CLIENT_ID);
     }
 
     private KeycloakPrincipal createPreAuthPrincipal(String subject) {
-        return new KeycloakPrincipal(subject, Collections.emptyList(), Collections.emptyMap());
+        OidcIdToken idToken = new OidcIdToken(
+            "token-value",
+            Instant.now(),
+            Instant.now().plusSeconds(3600),
+            Map.of("sub", subject)
+        );
+        return new KeycloakPrincipal(subject, Collections.emptyList(), idToken, null);
     }
 
     @Nested
@@ -77,14 +69,14 @@ class KeycloakAuthenticationProviderTest {
 
         @Test
         void 온라인_검증_성공시_인증에_성공하고_Principal을_생성한다() {
-            // 1. 준비 - mock 객체를 mockStatic 이전에 생성
+            // 1. 준비
             String idTokenVal = "valid.id.token";
             String accessTokenVal = "valid.access.token";
             KeycloakAuthentication authRequest = new KeycloakAuthentication(
                 createPreAuthPrincipal(USER_SUB), idTokenVal, accessTokenVal, false
             );
 
-            // Mock introspect response (mockStatic 밖에서 생성)
+            // Mock introspect response
             KeycloakIntrospectResponse introspectBody = mock(KeycloakIntrospectResponse.class);
             lenient().when(introspectBody.getActive()).thenReturn(true);
 
@@ -96,20 +88,30 @@ class KeycloakAuthenticationProviderTest {
             when(keycloakClient.auth().authenticationByIntrospect(idTokenVal))
                 .thenReturn(introspectResponse);
 
-            // Mocking ClientRegistration
-            when(clientRegistrationRepository.findByRegistrationId(REGISTRATION_ID))
-                .thenReturn(createMockClientRegistration(CLIENT_ID));
+            // Mock UserInfo response
+            KeycloakUserInfo keycloakUserInfo = mock(KeycloakUserInfo.class);
+            lenient().when(keycloakUserInfo.getSubject()).thenReturn(USER_SUB);
+            lenient().when(keycloakUserInfo.getOtherInfo()).thenReturn(new HashMap<>());
+
+            @SuppressWarnings("unchecked")
+            KeycloakResponse<KeycloakUserInfo> userInfoResponse = mock(KeycloakResponse.class);
+            lenient().when(userInfoResponse.getStatus()).thenReturn(200);
+            lenient().when(userInfoResponse.getBody()).thenReturn(Optional.of(keycloakUserInfo));
+
+            when(keycloakClient.user().getUserInfo(accessTokenVal))
+                .thenReturn(userInfoResponse);
 
             try (MockedStatic<JwtUtil> jwtUtilMock = mockStatic(JwtUtil.class)) {
                 // Mock JwtUtil - 클레임 파싱
+                Map<String, Object> claims = new HashMap<>();
+                claims.put("sub", USER_SUB);
+                claims.put("iat", Instant.now().getEpochSecond());
+                claims.put("exp", Instant.now().plusSeconds(3600).getEpochSecond());
+
                 jwtUtilMock.when(() -> JwtUtil.parseClaimsWithoutValidation(idTokenVal))
-                    .thenReturn(Map.of("sub", USER_SUB));
-                jwtUtilMock.when(() -> JwtUtil.parseClaimsWithoutValidation(accessTokenVal))
-                    .thenReturn(Map.of("sub", USER_SUB));
+                    .thenReturn(claims);
                 jwtUtilMock.when(() -> JwtUtil.parseSubjectWithoutValidation(idTokenVal))
                     .thenReturn(USER_SUB);
-                jwtUtilMock.when(() -> JwtUtil.extractRoles(any(), anyString()))
-                    .thenReturn(List.of("user"));
 
                 // 2. 실행
                 Authentication result = provider.authenticate(authRequest);
@@ -182,7 +184,7 @@ class KeycloakAuthenticationProviderTest {
     class 예외_테스트 {
 
         @Test
-        void ClientRegistration을_찾을_수_없으면_ConfigurationException이_발생한다() {
+        void UserInfo_조회_401_응답시_UserInfoFetchException이_발생한다() {
             // 1. 준비
             String idTokenVal = "valid.id.token";
             String accessTokenVal = "valid.access.token";
@@ -202,20 +204,29 @@ class KeycloakAuthenticationProviderTest {
             when(keycloakClient.auth().authenticationByIntrospect(idTokenVal))
                 .thenReturn(introspectResponse);
 
-            // ClientRegistration null 반환
-            when(clientRegistrationRepository.findByRegistrationId(REGISTRATION_ID)).thenReturn(null);
+            // Mock UserInfo response - 401
+            @SuppressWarnings("unchecked")
+            KeycloakResponse<KeycloakUserInfo> userInfoResponse = mock(KeycloakResponse.class);
+            lenient().when(userInfoResponse.getStatus()).thenReturn(401);
+
+            when(keycloakClient.user().getUserInfo(accessTokenVal))
+                .thenReturn(userInfoResponse);
 
             try (MockedStatic<JwtUtil> jwtUtilMock = mockStatic(JwtUtil.class)) {
-                // Mock JwtUtil
-                jwtUtilMock.when(() -> JwtUtil.parseClaimsWithoutValidation(anyString()))
-                    .thenReturn(Collections.emptyMap());
-                jwtUtilMock.when(() -> JwtUtil.parseSubjectWithoutValidation(anyString()))
+                Map<String, Object> claims = new HashMap<>();
+                claims.put("sub", USER_SUB);
+                claims.put("iat", Instant.now().getEpochSecond());
+                claims.put("exp", Instant.now().plusSeconds(3600).getEpochSecond());
+
+                jwtUtilMock.when(() -> JwtUtil.parseClaimsWithoutValidation(idTokenVal))
+                    .thenReturn(claims);
+                jwtUtilMock.when(() -> JwtUtil.parseSubjectWithoutValidation(idTokenVal))
                     .thenReturn(USER_SUB);
 
                 // 2. 실행 & 검증
                 assertThatThrownBy(() -> provider.authenticate(authRequest))
-                    .isInstanceOf(ConfigurationException.class)
-                    .hasMessageContaining("clientRegistration");
+                    .isInstanceOf(UserInfoFetchException.class)
+                    .hasMessageContaining("401");
             }
         }
 
